<resources>
    <string name="app_name">CompositionGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Состав числа</string>
    <string name="welcome_text"> Привет всем </string>
    <string name="welcome_rules">Правила игры: вылдао \nПример: вдыа выла</string>
    <string name="welcome_ok">Понятно</string>
    <string name="welcome_icon">welcome_icon</string>
    <string name="question_count_right_answers">Правильных ответов: %d из %d</string>
    <string name="game_result_retry">Попробовать снова</string>
    <string name="required_right_answers">Необходимое количество правильных ответов: %s</string>
    <string name="count_of_right_answers">Ваш счет: %s</string>
    <string name="required_right_answers_percent">Необходимый процент правильных ответов: %s</string>
    <string name="percent_of_right_answers">Ваш процент: %s</string>
    <string name="game_result_emoji">game result emoji</string>
    <string name="choose_game_level">Choose game level</string>
    <string name="game_level_test">test</string>
    <string name="game_level_easy">easy</string>
    <string name="game_level_normal">normal</string>
    <string name="game_level_hard">hard</string>
    <string name="question_unknown">\?</string>
</resources>