<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/choose_game_level"
        android:textSize="26sp" />

    <Button
        android:id="@+id/level_test"
        style="@style/LevelButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_level_test" />

    <Button
        android:id="@+id/level_easy"
        style="@style/LevelButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/game_level_easy" />

    <Button
        android:id="@+id/level_normal"
        style="@style/LevelButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/game_level_normal" />

    <Button
        android:id="@+id/level_hard"
        style="@style/LevelButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/game_level_hard" />

</LinearLayout>
</layout>